Regression: Fix Special:Watchlist width of page-header
The feed view tabs are squished.
This corrects this.

--- a/less/specials/pagefeed.less
+++ b/less/specials/pagefeed.less
@@ -39,6 +39,7 @@
 	li {
 		display: inline-block;
 		border-left: 1px solid @colorGray13;
+		width: 25%;
 		margin: 0 0 0 -1px;
 		border-bottom: none;
 
